Added NotificationDTO, UTest, changed UTest to reflect changes made to NotificationController by using DTO and removed unused import.